Some documentation cleanup.